--- a/app/package.json
+++ b/app/package.json
@@ -5,6 +5,7 @@
   "scripts": {
     "dev": "nuxt",
     "build": "nuxt build",
+    "rebuild": "cross-env REBULD=Y nuxt build",
     "start": "nuxt start",
     "generate": "nuxt generate"
   },
@@ -19,7 +20,9 @@
     "@nuxtjs/axios": "^5.12.5",
     "bootstrap": "^4.6.0",
     "bootstrap-vue": "^2.21.2",
+    "child_process": "^1.0.2",
     "core-js": "^3.8.3",
+    "cross-env": "^7.0.3",
     "nuxt": "^2.14.12"
   },
   "devDependencies": {
